fix(ui): Set a max height on the assign to user dropdown
Set max height of 400px to prevent this from getting too long in large teams.
Fixes #2198

--- a/src/sentry/static/sentry/less/shared-components.less
+++ b/src/sentry/static/sentry/less/shared-components.less
@@ -1933,6 +1933,8 @@ ul.faces {
     top: 30px;
     z-index: @zindex-dropdown;
     font-size: 13px;
+    max-height: 400px;
+    overflow-y: scroll;
 
     .form-control {
       border: 0;
